--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--CSS-->
-  <link rel= "stylesheet" href="styles/general.css">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Update HTMl</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--CSS-->
+
+    <link rel="stylesheet" href="styles/general.css" />
+    <title>Document</title>
+  </head>
+
+  <body>
+    <h1>Update HTMl</h1>
+  </body>
 </html>
