header added in html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   </head>
 
   <body>
-    <h1>Update HTMl</h1>
+    <header>
+      <div class="header-container">
+        <nav class="left-header">
+          <div>Website Resume</div>
+          <div>
+            Skills Working Experience Achievements Educational Background
+          </div>
+        </nav>
+
+        <nav class="right-header">trajanomarckenneth254@gmail.com</nav>
+      </div>
+    </header>
   </body>
 </html>
