--- a/index.html
+++ b/index.html
@@ -22,5 +22,21 @@
         <nav class="right-header">trajanomarckenneth254@gmail.com</nav>
       </div>
     </header>
+
+    <main>
+      <div class="r1">
+        <div class="background-photo"></div>
+        <div class="r1-content">
+          <h1>Website Resume by:</h1>
+          <h3>Marc Kenneth S. Trajano</h3>
+          <p>Website Development | Game Development | IT Support</p>
+        </div>
+      </div>
+
+      <div class="r2"></div>
+      <div class="r3"></div>
+      <div class="r4"></div>
+      <div class="r5"></div>
+    </main>
   </body>
 </html>
