r2 complete and added comments

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </header>
 
     <main>
+      <!--Intro-->
       <div class="r1">
         <div class="background-photo"></div>
         <div class="r1-content">
@@ -32,10 +33,47 @@
           <p>Website Development | Game Development | IT Support</p>
         </div>
       </div>
+      <!--SUmmary of Skills-->
+      <div class="r2">
+        <h2>Summary of Skills</h2>
+        <div class="skills-Container">
+          <div class="gd">
+            <h3>Game Development</h3>
+            <ul>
+              <li>Unity</li>
+              <li>Java</li>
+              <li>C#</li>
+              <li>Level Designer</li>
+              <li>Game Tester</li>
+            </ul>
+          </div>
 
-      <div class="r2"></div>
+          <div class="it">
+            <h3>IT-Support</h3>
+            <ul>
+              <li>Computer Troubleshoot</li>
+              <li>Computer Build</li>
+              <li>Computer Consultant</li>
+              <li>Printer Consultant</li>
+            </ul>
+          </div>
+          <div class="wd">
+            <h3>Front End Website Developer</h3>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+            <li>Git/GitHub</li>
+          </div>
+        </div>
+      </div>
+
+      <!--Work Experience-->
       <div class="r3"></div>
+
+      <!--Achievements-->
       <div class="r4"></div>
+
+      <!--Educational Background-->
       <div class="r5"></div>
     </main>
   </body>
