--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
         <div class="background-photo"></div>
         <div class="r1-content">
           <h1>Website Resume by:</h1>
-          <h3>Marc Kenneth S. Trajano</h3>
+          <h2>Marc Kenneth S. Trajano</h2>
           <p>Website Development | Game Development | IT Support</p>
         </div>
       </div>
+
       <!--SUmmary of Skills-->
       <div class="r2">
-        <h2>Summary of Skills</h2>
+        <h1>Summary of Skills</h1>
         <div class="skills-Container">
           <div class="gd">
             <h3>Game Development</h3>
@@ -68,10 +69,56 @@
       </div>
 
       <!--Work Experience-->
-      <div class="r3"></div>
+      <div class="r3">
+        <h1>Work Experience</h1>
+        <div class="r3-container">
+          <div class="inside-container">
+            <div class="r3-background-01"></div>
+            <div class="content">
+              <h3>Computer Technician Specialist - Freelance</h3>
+              <ul>
+                <li>Computer Troubleshooting</li>
+                <li>Personal Computer Building</li>
+                <li>PC Specification Consultant</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="inside-container">
+            <div class="r3-background-02"></div>
+            <div class="content">
+              <h3>Business Development Office &#40;CSJDM&#41; - Internship</h3>
+              <ul>
+                <li>Basic Graphics Design</li>
+                <li>Computer Hardware Maintenance</li>
+                <li>Photographer / Videographer</li>
+                <li>Video Editing</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="inside-container">
+        <div class="r3-background-03"></div>
+        <div class="content">
+          <h3>Grace General Hospital - Internship</h3>
+          <ul>
+            <li>Answering different calls from other department</li>
+            <li>PC Troubleshoot</li>
+            <li>CCTV Operator</li>
+            <li>Printer Troubleshoot</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
       <!--Achievements-->
-      <div class="r4"></div>
+      <div class="r4">
+        
+      </div>
 
       <!--Educational Background-->
       <div class="r5"></div>
