--- a/index.html
+++ b/index.html
@@ -117,7 +117,32 @@
 
       <!--Achievements-->
       <div class="r4">
-        
+        <h1>Achievements</h1>
+         <div class = "outer-container">
+
+          <div class="container">
+            <h3>Game Exhibit 2024</h3>
+            <p>Purgatorio &#40;Game&#41; - Most Popular</p>
+          </div>
+
+            <div class="container">
+              <h3>Game Exhibit 2023</h3>
+              <p>Verdant Catastrophe &#40;Game&#41; - Most Popular </p>
+            </div>
+
+            <div class="container">
+              <h3>2nd Semester - &#40; 4th year Collage&#41; </h3>
+              <p>Dean List Award</p>
+            </div>
+
+            <div class="container">
+              <h3>Hack4Gov - National Qualifiers</h3>
+              <h3>&#40; 3rd year Collage&#41;</h3>
+              <p>Certificate of participation</p>
+            </div>
+
+
+         </div>
       </div>
 
       <!--Educational Background-->
