r5 done added footer html

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <!--Achievements-->
       <div class="r4">
         <h1>Achievements</h1>
-         <div class = "outer-container">
+         <div class = "r4-outer-container">
 
           <div class="container">
             <h3>Game Exhibit 2024</h3>
@@ -140,13 +140,38 @@
               <h3>&#40; 3rd year Collage&#41;</h3>
               <p>Certificate of participation</p>
             </div>
-
-
          </div>
       </div>
 
       <!--Educational Background-->
-      <div class="r5"></div>
+      <div class="r5">
+        <h1>Educational Background</h1>
+        <div class = "r5-outside-container">
+
+        <div class="container">
+          <h2>Senior HighSchool</h2>
+          <h3>Technical Vocational Livelihood ICT</h3>
+          <h3>Computer System Servicing NCII</h3>
+          2018-2020
+          <h6>Village Montessori School and Collages</h6>
+        </div>
+
+
+        <div class="container">
+          <h2>Collage</h2>
+          <h3>Bachelor of Science in Entertainment and Multimedia Computing</h3>
+          <h3>Specialization in Game Development</h3>
+          2020-2024
+          <h6>City Collage of San Jose Del Monte</h6>
+        </div>
+        </div>
+      </div>
+
+
     </main>
+
+    <footer>
+      
+    </footer>
   </body>
 </html>
