added header css, change general css and tweek index a little

--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--CSS-->
-
     <link rel="stylesheet" href="styles/general.css" />
+    <link rel="stylesheet" href="styles/header.css" />
     <title>Document</title>
   </head>
 
   <body>
-    <header>
+
+    <header class = "header">
       <div class="header-container">
         <nav class="left-header">
           <div>Website Resume</div>
-          <div>
-            Skills Working Experience Achievements Educational Background
-          </div>
+          <nav>
+            <div>Skills</div>
+            <div>Working Experience</div>
+            <div>Achievements</div>
+            <div>Educational Background</div>
+          </nav>
         </nav>
 
         <nav class="right-header">trajanomarckenneth254@gmail.com</nav>
