added header animation

--- a/index.html
+++ b/index.html
@@ -172,10 +172,24 @@
       </div>
 
 
+      <footer>
+
+      </footer>
     </main>
 
-    <footer>
 
-    </footer>
+    <script>
+      document.addEventListener('scroll', () =>{
+        const header =  document.querySelector('header')
+        if(window.scrollY){
+          header.classList.add("scrolled");
+          console.log("scrolled");
+        } else {
+          header.classList.remove("scrolled");
+          console.log("not ");
+        }
+      })
+    </script>
+
   </body>
 </html>
