added Image r1 and r2 complete

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--CSS-->
-    <link rel="stylesheet" href="styles/general.css" />
-    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/general.css"/>
+    <link rel="stylesheet" href="styles/header.css"/>
+    <link rel="stylesheet" href="styles/r1.css" />
+    <link rel="stylesheet" href="styles/r2.css"/>
+    <link rel="stylesheet" href="styles/r3.css"/>
+    <link rel="stylesheet" href="styles/r4.css"/>
+    <link rel="stylesheet" href="styles/r5.css"/>
     <title>Document</title>
+
+<!--<a href="http://www.freepik.com">Designed by starline / Freepik</a>-->
+    
   </head>
 
   <body>
@@ -23,22 +31,28 @@
           </nav>
         </nav>
 
-        <nav class="right-header">trajanomarckenneth254@gmail.com</nav>
+        <nav class="right-header"><a href="">About me</a></nav>
       </div>
     </header>
 
     <main>
       <!--Intro-->
       <div class="r1">
-        <div class="background-photo"></div>
-        <div class="r1-content">
-          <h1>Website Resume by:</h1>
-          <h2>Marc Kenneth S. Trajano</h2>
-          <p>Website Development | Game Development | IT Support</p>
+        <div class="r1-container">
+         
+          <div class="r1-content">
+            <h2>Marc Kenneth S. Trajano</h2>
+            <p>0908-243-4191 / 0995-2803-3292</p>
+            <p>trajanomarckenneth254@gmail.com</p>
+            <p>San Jose Del Monte Bulacan 3023</p>
+            <p>Website Development | Game Development | IT Support</p>
+          </div>
+          <img src="/image/Kennethphotos/DSC_5694.JPG">
+
         </div>
       </div>
 
-      <!--SUmmary of Skills-->
+      <!--Summary of Skills-->
       <div class="r2">
         <h1>Summary of Skills</h1>
         <div class="skills-Container">
@@ -77,6 +91,7 @@
         <h1>Work Experience</h1>
         <div class="r3-container">
           <div class="inside-container">
+
             <div class="r3-background-01"></div>
             <div class="content">
               <h3>Computer Technician Specialist - Freelance</h3>
