--- a/index.html
+++ b/index.html
@@ -87,12 +87,13 @@
       </div>
 
       <!--Work Experience-->
+  
       <div class="r3">
         <h1>Work Experience</h1>
         <div class="r3-container">
 
-          <div class="inside-container">
-            <div class="r3-background-01"></div>
+          <div class="inside-container-01">
+            <section class="r3-background"></section>
             <div class="content">
               <h3>Computer Technician Specialist - Freelance</h3>
               <ul>
@@ -103,8 +104,8 @@
             </div>
           </div>
 
-          <div class="inside-container">
-            <div class="r3-background-02"></div>
+          <div class="inside-container-02">
+            <section class="r3-background"></section>
             <div class="content">
               <h3>Business Development Office &#40;CSJDM&#41; - Internship</h3>
               <ul>
@@ -116,8 +117,8 @@
             </div>
           </div>
 
-          <div class="inside-container">
-            <div class="r3-background-03"></div>
+          <div class="inside-container-03">
+            <section class="r3-background"></section>
             <div class="content">
               <h3>Grace General Hospital - Internship</h3>
               <ul>
@@ -133,7 +134,6 @@
 
    
 
-        
 
       </div>
 
