change alt imge r1

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p>San Jose Del Monte Bulacan 3023</p>
             <p id="section1">Website Development | Game Development | IT Support</p>
           </div>
-          <img src="/image/Kennethphotos/DSC_5694.JPG" >
+          <img src="/image/Kennethphotos/DSC_5694.JPG" alt="DSC_5694" >
 
         </div>
       </div>
