--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/r4.css"/>
     <link rel="stylesheet" href="styles/r5.css"/>
     <link rel="stylesheet" href="styles/footer.css"/>
-    <title>Document</title>
+    <title>Kenneth Resume</title>
 
 
     <!--Font Awesome-->
