fix image test2

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="r3-container">
 
           <div class="inside-container-01">
-            <section class="r3-background"></section>
+            <section class="r3-background"><img src="image/WorkExperience/Freelance/GridArt_20241104_192411978.jpg" class = "r3-background"> </section>
             <div class="content">
               <h3>Computer Technician Specialist - Freelance</h3>
               <ul>
@@ -111,7 +111,7 @@
           </div>
 
           <div class="inside-container-02">
-            <section class="r3-background"></section>
+            <section class="r3-background"> <img src="image/WorkExperience/bdo/GridArt_20241104_193120013.jpg" class = "r3-background"></section>
             <div class="content">
               <h3>Business Development Office &#40;CSJDM&#41; - Internship</h3>
               <ul>
@@ -124,7 +124,7 @@
           </div>
 
           <div class="inside-container-03">
-            <section class="r3-background"></section>
+            <section class="r3-background"> <img src="image/WorkExperience/GGH/GridArt_20241104_193411678.jpg" class = "r3-background"></section>
             <div class="content">
               <h3>Grace General Hospital - Internship</h3>
               <ul>
