--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles/r4.css"/>
     <link rel="stylesheet" href="styles/r5.css"/>
     <link rel="stylesheet" href="styles/footer.css"/>
+    <link rel = "stylesheet" href="styles/ResposiveDesign.css">
     <title>Kenneth Resume</title>
 
 
@@ -25,7 +26,7 @@
     <header class = "header">
       <div class="header-container">
         <nav class="left-header">
-          <div><a href="#section0">Website Resume</a></div>
+          <div><a href="#section0">K-web Resume</a></div>
           <nav>
             <div><a href="#section1">Skills</a></div>
             <div><a href="#section2">Working Experience </a></div>
@@ -38,7 +39,7 @@
       </div>
     </header>
 
-    <main>
+    <div class ="MainDocument">
       <!--Intro-->
       <div class="r1" id = "section0">
         <div class="r1-container">
@@ -83,12 +84,13 @@
             </ul>
           </div>
           <div class="wd">
-            <h3>Front End Website Developer</h3>
+            <h3>Website Development</h3>
             <li>HTML</li>
             <li>CSS</li>
             <li>Javascript</li>
             <li id="section2">Git/GitHub</li>
           </div>
+
         </div>
       </div>
 
@@ -192,43 +194,39 @@
         </div>
         </div>
       </div>
+    </div>
 
+    <footer class="f1">
 
-      <footer class="f1">
-
-        <div class="f1-container">
-          <div class="f1-left-side">
-            <div class="name-of-company">
-              <div>Website Resume </div>
-              <div>Philippines</div>
-              <div>trajanomarckenneth254@gmail.com</div>
-            </div>
-
-          </div>
-
-
-          <div>
-            <container class="f1-logo-container">
-              <div>X</div>
-
-              <div><a href="https://www.facebook.com/trajano.marckenneth?mibextid=ZbWKwL" target="_blank">
-                  <i class="fa fa-facebook"></i></a>
-              </div>
-
-              <div>
-                <a href="https://www.linkedin.com/in/marc-kenneth-trajano-45747531a/" target="_blank">
-                  <i class="fa fa-linkedin"></i>
-                </a>
-              </div>
-            </container>
-            <p> 2024 k-games all rights reserve</p>
+      <div class="f1-container">
+        <div class="f1-left-side">
+          <div class="name-of-company">
+            <div>K-web Resume</div>
+            <div>Philippines</div>
+            <div>trajanomarckenneth254@gmail.com</div>
           </div>
 
         </div>
 
 
-      </footer>
-    </main>
+        <div>
+          <container class="f1-logo-container">
+            <div>X</div>
+
+            <div><a href="https://www.facebook.com/trajano.marckenneth?mibextid=ZbWKwL" target="_blank">
+                <i class="fa fa-facebook"></i></a>
+            </div>
+
+            <div>
+              <a href="https://www.linkedin.com/in/marc-kenneth-trajano-45747531a/" target="_blank">
+                <i class="fa fa-linkedin"></i>
+              </a>
+            </div>
+          </container>
+          <p> 2024 K-web Resume all rights reserve</p>
+        </div>
+      </div>
+    </footer>
 
 
     <script>
