--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles/resume/general.css"/>
     <link rel="stylesheet" href="styles/resume/main.css"/>
     <link rel="stylesheet" href="styles/shared-css/footer.css"/>
+    <link rel="stylesheet" href="styles/resume/ResposiveDesign.css">
 
     <!-- title -->
     <title>Kenneth Resume</title>
@@ -32,7 +33,6 @@
         <nav class="right-header"><a href="#section0-1">About Me</a></nav>
       </div>
     </header>
-
 
     <div class ="MainDocument">
       <!--Intro-->
@@ -243,7 +243,6 @@
     </footer>
 
 
-    <script src = "scripts/headerFade.js"></script>
-
+   <script src = "scripts/headerFade.js"></script>
   </body>
 </html>
