change name blog html to index.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <div class="r1-1-container">
         <div class="r1-1-content">
-          <h2><a href="/html-links/blog.html" target="_blank">About me</a></h2>
+          <h2><a href="/html-links/index.html" target="_blank">About me</a></h2>
           <p> I'm a game developer, web frontend developer, and IT support professional with a passion for creating seamless,
              user-friendly experiences. I blend creativity and problem-solving to build immersive games, creating front-end websites, and
             troubleshoot technical issues. As a game developer, I bring ideas to life using various game engines and languages. In web development, 
