remove website resume

--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         <nav class="left-header">
           <div><a href="#section0">K-web Resume</a></div>
           <nav>
-            <div><a href="https://neths-017.github.io/blog/" target="_blank">Personal Blog</a></div>
+            <div><a href="https://neths-017.github.io/blog/">Personal Blog</a></div>
             <div><a href="#section1">Game Portfolio</a></div>
-            <div style="color:#416b96">Website Resume</div>
             <div><a href="#section4">Landing Page</a></div>
           </nav>
         </nav>
