place blog.html here

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="left-header">
           <div><a href="#section0">K-web Resume</a></div>
           <nav>
-            <div><a href="https://neths-017.github.io/blog/">Personal Blog</a></div>
+            <div><a href="blog.html">Personal Blog</a></div>
             <div><a href="b.html">Game Portfolio</a></div>
             <div><a href="#section4">Landing Page</a></div>
           </nav>
