Big push: put game portfolio in index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div><a href="#section0">K-web Resume</a></div>
           <nav>
             <div><a href="blog.html">Personal Blog</a></div>
-            <div><a href="b.html">Game Portfolio</a></div>
+            <div><a href="GamePortfolio.html">Game Portfolio</a></div>
             <div><a href="#section4">Landing Page</a></div>
           </nav>
         </nav>
