--- a/GamePortfolio.html
+++ b/GamePortfolio.html
@@ -40,8 +40,8 @@
       </div>
 
       <div class="h1-right-side">
-        <div><a href="index.html">Website Resume</a></div>
-        <div><a href="blog.html">Blog</a></div>
+        <div><a href="index.html" style="color: aliceblue;">Website Resume</a></div>
+        <div><a href="blog.html" style="color: aliceblue;">Blog</a></div>
         <div>Landing Page</div>
         <div>Contact me</div>
       </div>
@@ -124,7 +124,7 @@
 
           <div class="videoContent">
             <video width="400" controls>
-              <source src="Videos/Twailew.mp4" type="video/mp4">
+              <source src="Videos/CommingSoon.mp4" type="video/mp4">
               <source src="mov_bbb.ogg" type="video/ogg">
               Your browser does not support HTML video.
             </video>
@@ -166,7 +166,7 @@
 
             <div class="videoContent">
               <video width="400" controls>
-                <source src="Videos/Twailew.mp4" type="video/mp4">
+                <source src="Videos/CommingSoon.mp4" type="video/mp4">
                 <source src="mov_bbb.ogg" type="video/ogg">
                 Your browser does not support HTML video.
               </video>
