--- a/blog.html
+++ b/blog.html
@@ -35,9 +35,9 @@
         <nav class="left-header">
           <div><a href="#section0">K-web Resume</a></div>
           <nav>
-            <div><a href="#section1">Game Portfolio</a></div>
+            <div><a href="GamePortfolio.html">Game Portfolio</a></div>
             <div>
-              <a href="https://neths-017.github.io/Resume/">Website Resume</a>
+              <a href="index.html">Website Resume</a>
             </div>
             <div><a href="#section4">Landing Page</a></div>
           </nav>
