change photo in r1 and add shadow

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>San Jose Del Monte Bulacan 3023</p>
             <p>Website Development | Game Development | IT Support</p>
           </div>
-          <img src="image/Kennethphotos/DSC_5694.JPG" alt="DSC_5694">
+          <img src="image/Kennethphotos/DSC_5687TrajanoMarcKennethS..JPG" alt="DSC_5694">
         </div> 
     
         <!--About me-->
