--- a/blog.html
+++ b/blog.html
@@ -265,17 +265,6 @@
       </div>
     </footer>
 
-    <script>
-      document.addEventListener("scroll", () => {
-        const header = document.querySelector("header");
-        if (window.scrollY) {
-          header.classList.add("scrolled");
-          console.log("scrolled");
-        } else {
-          header.classList.remove("scrolled");
-          console.log("not ");
-        }
-      });
-    </script>
+    <script src="scripts/headerFade.js"></script>
   </body>
 </html>
