--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="gd">
             <h3>Game Development</h3>
             <ul>
-              <li>Unity</li>
+              <li>Unityy</li>
               <li>Java</li>
               <li>C#</li>
               <li>Level Designer</li>
