added responsive design on game portfolio

--- a/GamePortfolio.html
+++ b/GamePortfolio.html
@@ -23,12 +23,14 @@
   <link rel="stylesheet" href="styles/Game portfolio/s2.css">
   <link rel="stylesheet" href="styles/Game portfolio/header.css">
   <link rel="stylesheet" href="styles/Game portfolio/footer.css">
+  
 
   <link rel="stylesheet" href="styles/Game portfolio/g0.css">
   <link rel="stylesheet" href="styles/Game portfolio/general.css">
+  <link rel="stylesheet" href="styles/Game portfolio/ResponsiveDesign.css">
 
 
-</head>
+<head>
 
 <body>
   <header class="header">
