change blog introduction

--- a/blog.html
+++ b/blog.html
@@ -65,41 +65,24 @@
         <div class="b2-container">
           <h2>Introduction</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur
-            accusamus autem quaerat, ea dolorum quidem necessitatibus cumque
-            doloribus repellat iusto, labore voluptatibus porro? Voluptate
-            veritatis optio, sequi aut ullam debitis? Sequi perspiciatis eaque,
-            distinctio nam ex iure autem. Expedita aliquam repellat voluptatem,
-            illum adipisci eveniet error. Quam voluptates enim nulla. Assumenda
-            accusantium autem reprehenderit repellat dolore quam magni corrupti.
-            Corporis. Amet neque minima maiores commodi nobis possimus esse rem
-            quisquam magnam quia dolor distinctio sapiente unde eligendi
-            recusandae placeat voluptas magni alias assumenda omnis
-            consequuntur, ea facere! Hic, quasi dolorum. Recusandae incidunt
-            eius ut? Cupiditate dignissimos alias vel molestias ea explicabo
-            architecto aspernatur velit ducimus ipsam saepe nisi illum minima
-            quae, eos aliquid sed praesentium id rerum repudiandae unde eius.
-            Voluptas id in neque sit iusto tenetur deserunt vero quaerat,
-            placeat ipsum earum officia inventore corrupti explicabo quibusdam
-            iste eaque delectus sint facilis dolore officiis, optio odio,
-            ratione esse! Illo? Doloribus alias debitis voluptate perferendis
-            vero laboriosam ad iusto iste! Quam placeat odio sint repellendus
-            odit amet nihil cum delectus praesentium repellat. Nam, aspernatur
-            fugiat officiis tempora beatae alias harum. Maxime magnam
-            voluptates, vero sed blanditiis enim voluptas perspiciatis. Sed
-            provident sunt, unde mollitia eligendi ab eius nam cum beatae non
-            repellat officiis suscipit repellendus commodi facere quod sequi
-            officia. Quod repellendus tempore asperiores ducimus laborum, esse
-            harum voluptatibus architecto voluptate ab minima iure laudantium
-            aut voluptas, sequi, eligendi blanditiis dolor repudiandae.
-            Praesentium magni molestiae impedit fuga minus similique corporis?
-            Sequi labore, harum libero cum vel repudiandae dolore. Pariatur
-            voluptatem quos natus aliquid consectetur iusto consequuntur eaque,
-            ex sapiente aspernatur quibusdam vel beatae, sint ad harum cumque
-            non illo eius. A maiores quas nisi earum voluptate adipisci aliquid
-            dolorum. Vero impedit accusantium dolore repellendus consequuntur
-            nihil possimus porro, optio laudantium, laborum itaque officia odio,
-            animi commodi sint ratione beatae perspiciatis.
+            Hello, my name is Marc Kenneth Trajano. I am 24 years old and
+            currently reside in the City of San Jose del Monte, Bulacan, a
+            vibrant city in the province of Bulacan, Philippines. I am
+            passionate about various interests that fuel my creativity and
+            curiosity, which is why I&apos;ve decided to start this blog.
+            Through this platform, I aim to share my thoughts, experiences, and
+            insights on topics that excite me. Whether it&apos;s technology,
+            personal development, local culture, or the beauty of the places
+            around me, my goal is to create content that resonates with my
+            readers and adds value to their day. Being from San Jose del Monte,
+            I&apos;m also keen on highlighting the unique aspects of our
+            community, the people, and the local developments that shape our
+            everyday lives. I hope that through this blog, I can connect with
+            like-minded individuals, exchange ideas, and inspire others to
+            explore the world around them with an open mind and heart. Whether
+            you're here for a dose of inspiration or a bit of local flavor, I
+            hope you find something that sparks your interest. Thanks for
+            visiting, and feel free to stay tuned for more updates!
           </p>
         </div>
 
