change image in blog

--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
       <div class="b1">
         <div class="b1-outside-container">
           <img
-            src="image/Kennethphotos/cropImgbg.png"
+            src="image/Kennethphotos/cropImgbg.jpg"
             alt="kenneth way"
             class="b1-img"
           />
