--- a/GamePortfolio.html
+++ b/GamePortfolio.html
@@ -23,146 +23,104 @@
   <link rel="stylesheet" href="styles/Game portfolio/s2.css">
   <link rel="stylesheet" href="styles/Game portfolio/header.css">
   <link rel="stylesheet" href="styles/Game portfolio/footer.css">
-  
+
 
   <link rel="stylesheet" href="styles/Game portfolio/g0.css">
   <link rel="stylesheet" href="styles/Game portfolio/general.css">
   <link rel="stylesheet" href="styles/Game portfolio/ResponsiveDesign.css">
 
 
-<head>
+  <head>
 
-<body>
-  <header class="header">
+  <body>
+    <header class="header">
 
-    <container class="header-container">
-      <div class="h1-left-side">
-        <img src="image/Logo/logo03-removebg-preview.png">
-        <p>Game Development Portfolio</p>
+      <container class="header-container">
+        <div class="h1-left-side">
+          <img src="image/Logo/logo03-removebg-preview.png">
+          <p>Game Development Portfolio</p>
+        </div>
+
+        <div class="h1-right-side">
+          <div><a href="index.html" style="color: aliceblue;">Website Resume</a></div>
+          <div><a href="blog.html" style="color: aliceblue;">Blog</a></div>
+          <div>Landing Page</div>
+          <div><a href="ContactForm.html" style="color: aliceblue;">Contact me</a></div>
+        </div>
+      </container>
+
+    </header>
+
+    <main>
+      <!--s1-->
+      <div class="s1">
+        <div>
+          <p class="s1-headline">Game Portfolio by <strong>Marc Kenneth S. Trajano</strong></p>
+          <p>&#40;63+&#41; 09082334191 | trajanomarckenneth254@gmail.com</p>
+        </div>
       </div>
 
-      <div class="h1-right-side">
-        <div><a href="index.html" style="color: aliceblue;">Website Resume</a></div>
-        <div><a href="blog.html" style="color: aliceblue;">Blog</a></div>
-        <div>Landing Page</div>
-        <div>Contact me</div>
-      </div>
-    </container>
+      <!--s2-->
 
-  </header>
+      <div class="s2">
+        <h2>Game Development Skills</h2>
 
-  <main>
-    <!--s1-->
-    <div class="s1">
-      <div>
-        <p class="s1-headline">Game Portfolio by <strong>Marc Kenneth S. Trajano</strong></p>
-        <p>&#40;63+&#41; 09082334191 | trajanomarckenneth254@gmail.com</p>
-      </div>
-    </div>
+        <div class="s2-outer-container">
 
-    <!--s2-->
-
-    <div class="s2">
-      <h2>Game Development Skills</h2>
-
-      <div class="s2-outer-container">
-
-        <container class="main-container">
-          <img src="image/Logo/unityIcon.png">
-          <div>Unity</div>
-          <p>Reasonable understanding about the game
-            enging unity</p>
-        </container>
-
-        <container class="main-container">
-          <img src="image/Logo/cSharpIcon.png">
-          <div>C#</div>
-          <p>using c# as the main programming language for creating logics
-            in video games</p>
-        </container>
-
-        <container class="main-container">
-          <img src="image/Logo/gameTesterIcon.png">
-          <div>Game Tester</div>
-          <p>For assuring that the quality of the product is top notch
-            and has less bugs</p>
-        </container>
-
-      </div>
-
-      <div class="s2-outer-container-2">
-        <container class="main-container">
-          <img src="image/Logo/levelDesignIcon.png" class="lvl-design">
-          <div>Level Desinger</div>
-          <p>creating stunning levels for the player to stand on and
-            explore</p>
-        </container>
-
-        <container class="main-container">
-          <img src="image/Logo/javaICon.png">
-          <div>Java</div>
-          <p>understanding in using the language java</p>
-        </container>
-      </div>
-
-
-    </div>
-
-    <!--g0-->
-
-    <div class="g0">
-      <h1> Sample Works</h1>
-
-      <div class="g1">
-        <!--Background Images from the game-->
-        <section class="background-image"></section>
-        <div class="Inside-container">
-          <container>
-            <h2>Way Out</h2>
-            <p>A 2d Platformer game made for windows platform.
-              The goal of the game is finish each level and finish the boss.
-            </p>
+          <container class="main-container">
+            <img src="image/Logo/unityIcon.png">
+            <div>Unity</div>
+            <p>Reasonable understanding about the game
+              enging unity</p>
           </container>
 
-          <div class="videoContent">
-            <video width="400" controls>
-              <source src="Videos/CommingSoon.mp4" type="video/mp4">
-              <source src="mov_bbb.ogg" type="video/ogg">
-              Your browser does not support HTML video.
-            </video>
-          </div>
+          <container class="main-container">
+            <img src="image/Logo/cSharpIcon.png">
+            <div>C#</div>
+            <p>using c# as the main programming language for creating logics
+              in video games</p>
+          </container>
+
+          <container class="main-container">
+            <img src="image/Logo/gameTesterIcon.png">
+            <div>Game Tester</div>
+            <p>For assuring that the quality of the product is top notch
+              and has less bugs</p>
+          </container>
+
         </div>
 
-        <div class="g2">
+        <div class="s2-outer-container-2">
+          <container class="main-container">
+            <img src="image/Logo/levelDesignIcon.png" class="lvl-design">
+            <div>Level Desinger</div>
+            <p>creating stunning levels for the player to stand on and
+              explore</p>
+          </container>
+
+          <container class="main-container">
+            <img src="image/Logo/javaICon.png">
+            <div>Java</div>
+            <p>understanding in using the language java</p>
+          </container>
+        </div>
+
+
+      </div>
+
+      <!--g0-->
+
+      <div class="g0">
+        <h1> Sample Works</h1>
+
+        <div class="g1">
           <!--Background Images from the game-->
           <section class="background-image"></section>
           <div class="Inside-container">
             <container>
-              <h2>Purgatorio</h2>
-              <p>A 2d Platformer game inspired by Inferno poem by dante alighier.
-                The goal is to beat the boss next level and descent to the final level to finish the game.
-              </p>
-            </container>
-
-            <div class="videoContent">
-              <video width="400" controls>
-                <source src="Videos/Twailew.mp4" type="video/mp4">
-                <source src="mov_bbb.ogg" type="video/ogg">
-                Your browser does not support HTML video.
-              </video>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="g3">
-          <!--Background Images from the game-->
-          <section class="background-image"></section>
-          <div class="Inside-container">
-            <container>
-              <h2>End Point: War of the Cylinds</h2>
-              <p>A 3D 3rd person point of view shared screen multiplayer game.
-                The goal of the game is to beat your enemy to the finish line first.
+              <h2>Way Out</h2>
+              <p>A 2d Platformer game made for windows platform.
+                The goal of the game is finish each level and finish the boss.
               </p>
             </container>
 
@@ -175,21 +133,20 @@
             </div>
           </div>
 
-
-          <div class="g4">
+          <div class="g2">
             <!--Background Images from the game-->
             <section class="background-image"></section>
             <div class="Inside-container">
               <container>
-                <h2>Verdant Catastrophe</h2>
-                <p>A 3D FPS story based game.
-                  The goal of the game to comply with the objective, kill enemies and, kill bosses.
+                <h2>Purgatorio</h2>
+                <p>A 2d Platformer game inspired by Inferno poem by dante alighier.
+                  The goal is to beat the boss next level and descent to the final level to finish the game.
                 </p>
               </container>
 
               <div class="videoContent">
                 <video width="400" controls>
-                  <source src="Videos/VERDANT_CATASTROPHE.mp4" type="video/mp4">
+                  <source src="Videos/Twailew.mp4" type="video/mp4">
                   <source src="mov_bbb.ogg" type="video/ogg">
                   Your browser does not support HTML video.
                 </video>
@@ -198,55 +155,98 @@
 
           </div>
 
-          <!--footer-->
-          <footer class="f1">
+          <div class="g3">
+            <!--Background Images from the game-->
+            <section class="background-image"></section>
+            <div class="Inside-container">
+              <container>
+                <h2>End Point: War of the Cylinds</h2>
+                <p>A 3D 3rd person point of view shared screen multiplayer game.
+                  The goal of the game is to beat your enemy to the finish line first.
+                </p>
+              </container>
 
-            <div class="f1-container">
-              <div class="f1-left-side">
-                <img src="image/Logo/logo03-removebg-preview.png">
-                <div class="name-of-company">
-                  <div>K-games </div>
-                  <div>Philippines</div>
-                  <div>trajanomarckenneth254@gmail.com</div>
+              <div class="videoContent">
+                <video width="400" controls>
+                  <source src="Videos/CommingSoon.mp4" type="video/mp4">
+                  <source src="mov_bbb.ogg" type="video/ogg">
+                  Your browser does not support HTML video.
+                </video>
+              </div>
+            </div>
+
+
+            <div class="g4">
+              <!--Background Images from the game-->
+              <section class="background-image"></section>
+              <div class="Inside-container">
+                <container>
+                  <h2>Verdant Catastrophe</h2>
+                  <p>A 3D FPS story based game.
+                    The goal of the game to comply with the objective, kill enemies and, kill bosses.
+                  </p>
+                </container>
+
+                <div class="videoContent">
+                  <video width="400" controls>
+                    <source src="Videos/VERDANT_CATASTROPHE.mp4" type="video/mp4">
+                    <source src="mov_bbb.ogg" type="video/ogg">
+                    Your browser does not support HTML video.
+                  </video>
+                </div>
+              </div>
+
+            </div>
+
+            <!--footer-->
+            <footer class="f1">
+
+              <div class="f1-container">
+                <div class="f1-left-side">
+                  <img src="image/Logo/logo03-removebg-preview.png">
+                  <div class="name-of-company">
+                    <div>K-games </div>
+                    <div>Philippines</div>
+                    <div>trajanomarckenneth254@gmail.com</div>
+                  </div>
+
+                </div>
+
+
+                <div>
+                  <container class="f1-logo-container">
+                    <div>X</div>
+
+                    <div><a href="https://www.facebook.com/trajano.marckenneth?mibextid=ZbWKwL" target="_blank">
+                        <i class="fa fa-facebook"></i></a>
+                    </div>
+
+                    <div>
+                      <a href="https://www.linkedin.com/in/marc-kenneth-trajano-45747531a/" target="_blank">
+                        <i class="fa fa-linkedin"></i>
+                      </a>
+                    </div>
+                  </container>
+                  <p> 2024 k-games all rights reserve</p>
                 </div>
 
               </div>
 
 
-              <div>
-                <container class="f1-logo-container">
-                  <div>X</div>
+            </footer>
+    </main>
+    <script>
+      document.addEventListener('scroll', () => {
+        const header = document.querySelector('header');
+        if (window.scrollY > 0) {
+          header.classList.add('scrolled')
 
-                  <div><a href="https://www.facebook.com/trajano.marckenneth?mibextid=ZbWKwL" target="_blank">
-                      <i class="fa fa-facebook"></i></a>
-                  </div>
+        } else {
+          header.classList.remove('scrolled')
 
-                  <div>
-                    <a href="https://www.linkedin.com/in/marc-kenneth-trajano-45747531a/" target="_blank">
-                      <i class="fa fa-linkedin"></i>
-                    </a>
-                  </div>
-                </container>
-                <p> 2024 k-games all rights reserve</p>
-              </div>
-
-            </div>
-
-
-          </footer>
-  </main>
-  <script>
-    document.addEventListener('scroll', () => {
-      const header = document.querySelector('header');
-      if (window.scrollY > 0) {
-        header.classList.add('scrolled')
-
-      } else {
-        header.classList.remove('scrolled')
-
-      }
-    })
-  </script>
-</body>
+        }
+      })
+    </script>
+  </body>
 
 </html>
