-fix background color footer,headear and general resume
-change "Landing page " to "System portfolio"

--- a/GamePortfolio.html
+++ b/GamePortfolio.html
@@ -44,7 +44,7 @@
         <div class="h1-right-side">
           <div><a href="index.html" style="color: aliceblue;">Website Resume</a></div>
           <div><a href="blog.html" style="color: aliceblue;">Blog</a></div>
-          <div>Landing Page</div>
+          <div>System Portfolio</div>
           <div><a href="ContactForm.html" style="color: aliceblue;">Contact me</a></div>
         </div>
       </container>
