--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
           <div>
             <a href="index.html">Website Resume</a>
           </div>
-          <div><a href="#section4">Landing Page</a></div>
+          <div><a href="#section4">System Portfolio</a></div>
         </nav>
       </nav>
       <nav class="right-header"><a href="ContactForm.html">Contact me</a></nav>
