--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav>
           <div><a href="blog.html">Personal Blog</a></div>
           <div><a href="GamePortfolio.html">Game Portfolio</a></div>
-          <div><a href="#section4">Landing Page</a></div>
+          <div><a href="#section4">System Portfolio</a></div>
         </nav>
       </nav>
 
