--- a/ContactForm.html
+++ b/ContactForm.html
@@ -26,15 +26,17 @@
     <div class="cf2">
       <div></div>
       <form action="https://formsubmit.co/emailform095@gmail.com" method="POST">
+        <!-- Main Form -->
         <input type="text" id="nametext" name="name" required placeholder="Name" />
         <input type="email" id="Customer_email" name="email" required placeholder="Email" />
         <input type="tel" id="mobile" name="mobile" placeholder="Mobile Number" />
         <input type="text" id="Sub_text" name="subject" placeholder="Subject" />
         <textarea class="text-message" name="msg" id="Message_text" placeholder="Message"></textarea>
-        <input type="hidden" name="_template" value="table">
+        <!-- Auto reply -->
         <input type="hidden" name="_autoresponse"
           value="Thank you for reaching out to me! I will give you a reply as soon as possible!">
-
+        <input type="hidden" name="_template" value="table">
+        <!-- Main form -->
         <button class="submit-btn" type="submit">Submit</button>
 
       </form>
