--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
             <li>HTML</li>
             <li>CSS</li>
             <li>Javascript</li>
+            <li>PHP</li>
+            <li>MySQL</li>
             <li>Git/GitHub</li>
           </ul>
 
