--- a/ContactForm.html
+++ b/ContactForm.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -25,7 +26,7 @@
 
     <div class="cf2">
       <div></div>
-      <form action="https://formsubmit.co/emailform095@gmail.com" method="POST">
+      <form onsubmit="SendEmail(); reset(); return false;">
         <!-- Main Form -->
         <input type="text" id="nametext" name="name" required placeholder="Name" />
         <input type="email" id="Customer_email" name="email" required placeholder="Email" />
@@ -33,14 +34,15 @@
         <input type="text" id="Sub_text" name="subject" placeholder="Subject" />
         <textarea class="text-message" name="msg" id="Message_text" placeholder="Message"></textarea>
         <input type="hidden" name="_template" value="table">
-        <input type="hidden" name="_autoresponse"
-          value="Thank you for reaching out to me! I will give you a reply as soon as possible!">
         <button class="submit-btn" type="submit">Submit</button>
-
-      </form>
+        <a href="index.html">Resume Website</a>
+    </div>
+    </form>
     </div>
   </main>
-
+  <script src="https://smtpjs.com/v3/smtp.js">
+  </script>
+  <script src="scripts/EmailSender.js"> </script>
 </body>
 
 </html>
